baseurl for pdfs

--- a/_posts/2023-10-30-sideways.markdown
+++ b/_posts/2023-10-30-sideways.markdown
@@ -9,4 +9,4 @@ author: "Laura Martens"
 
 <p></p>
 
-{% pdf "/files/IaSM_Bulletin1_Sideways.pdf" %}
+{{ site.baseurl }}{% pdf "/files/IaSM_Bulletin1_Sideways.pdf" %}
